--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,28 @@
-body {}
+body {
+    background-color: #FFFCB7;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 20px;
+}
+
+h1 {
+    text-align: center;
+    background-color: rgb(255, 210, 96);
+    padding: 5px;
+    margin: 30px;
+    color: #005763;
+    border: 2px dashed #005763;
+    font-size: 35px;
+
+}
+
+.title {
+    color: #005763;
+    line-height: 10px;
+    font-size: 30px;
+}
+
+.sub {
+    color: #005763;
+    line-height: 10px;
+    font-size: 25px;
+}
